Fix hover state on firefox for btn-setting

--- a/web.bitRepublic/client/sass/pages/_profile.scss
+++ b/web.bitRepublic/client/sass/pages/_profile.scss
@@ -78,10 +78,10 @@
 
 .user-menu__button svg {
   fill: $grey-50;
+}
 
-  &:hover {
-    fill: $color-primary;
-  }
+.user-menu__button:hover svg {
+  fill: $color-primary;
 }
 
 .user-menu .dropdown__content {
